[tool.poetry]
name = "vec2d"
version = "0.2.1a0"
description = "Maths and Graph functions for vectors on the 2D plane"
authors = ["Sergio F. Gonzalez <sergio.f.gonzalez@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/sergiofgonzalez/vec2d"
packages = [{include = "vec2d"}]


[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
numpy = "^1.26.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
